--- a/style.sass
+++ b/style.sass
@@ -335,7 +335,7 @@ button
     background-color: $secondary-color-2
     transform: scale(1.02)
 
-
+//FAQ page CSS
 .faqcontainer
   width: 80%
   margin: 0 auto
