--- a/style.css
+++ b/style.css
@@ -346,4 +346,72 @@ h1, h2 {
 .answer {
   margin-top: 10px;
   margin-bottom: 20px;
+}
+
+.nav .logo {
+  margin-right: 100px;
+}
+
+@media (max-width: 1200px) {
+  .nav .logo {
+    margin-right: 20px;
+  }
+  .nav input[type=text] {
+    width: 30%;
+  }
+  .grid-container {
+    margin: 40px 50px 70px 50px;
+  }
+}
+@media (max-width: 992px) {
+  .nav .logo {
+    margin-right: 10px;
+  }
+  .nav input[type=text] {
+    width: 20%;
+  }
+  .grid-container {
+    margin: 40px 30px 70px 30px;
+  }
+}
+@media (max-width: 768px) {
+  .nav {
+    flex-direction: column;
+    align-items: center;
+  }
+  .nav input[type=text] {
+    width: 20%;
+  }
+  .nav .logo {
+    margin-right: 0;
+  }
+  .grid-container {
+    margin: 40px 10px 70px 10px;
+  }
+  .grid-item img {
+    width: 100%;
+  }
+  .contact, .deals, .product-categories {
+    padding: 10px;
+  }
+}
+@media (max-width: 576px) {
+  .nav a {
+    font-size: 14px;
+    padding: 10px 12px;
+  }
+  input[type=text] {
+    width: 0%;
+  }
+  .purchase-container {
+    padding: 15px;
+    max-width: 100%;
+    width: auto;
+  }
+  .purchase-container input {
+    width: 100%;
+  }
+  .footer {
+    padding: 10px 0;
+  }
 }/*# sourceMappingURL=style.css.map */
