--- a/style.css
+++ b/style.css
@@ -15,6 +15,7 @@
   width: 100%;
   z-index: 1000;
   top: 0;
+  border-bottom: 1px solid #80caff;
 }
 .nav img {
   width: 60px;
@@ -156,7 +157,7 @@
 
 .contact {
   color: #333;
-  max-width: 1200px;
+  max-width: 800px;
   margin: 50px auto;
   padding: 20px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
@@ -228,7 +229,7 @@
 .product-categories {
   padding: 20px;
   background-color: #ffffff;
-  max-width: 1000px;
+  max-width: 800px;
   margin: 50px auto;
   border-radius: 8px;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
