--- a/about.css
+++ b/about.css
@@ -7,7 +7,7 @@ body {
 }
 
 .container {
-    max-width: 900px;
+    max-width: 800px !important;
     margin: 50px auto;
     padding: 20px;
     background-color: #fff;
