--- a/style.sass
+++ b/style.sass
@@ -33,6 +33,7 @@ $hover-color: #1e90ff
   width: 100%
   z-index: 1000
   top: 0
+  border-bottom: 1px solid $accent-color-1
 
   img
     width: 60px
@@ -173,7 +174,7 @@ $hover-color: #1e90ff
 // Contact Page
 .contact
   color: $footer-background
-  max-width: 1200px
+  max-width: 800px
   margin: 50px auto
   padding: 20px
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1)
@@ -243,7 +244,7 @@ $hover-color: #1e90ff
 .product-categories
   padding: 20px
   background-color: $light-background
-  max-width: 1000px
+  max-width: 800px
   margin: 50px auto
   border-radius: 8px
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1)
