--- a/style.sass
+++ b/style.sass
@@ -6,7 +6,7 @@ $accent-color-1: #80caff
 $accent-color-2: #c5e8ff
 $accent-color-3: #e6f5ff
 $light-background: #ffffff
-$medium-background: #dbdbdb
+$medium-background: #f8f8f8
 $dark-text: #003d7a
 $subtext: #707070
 $button-background: #e8f5e9
