--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 }
 
 .main {
-  background-color: #dbdbdb;
+  background-color: #f8f8f8;
 }
 
 .nav {
@@ -281,7 +281,7 @@
   align-items: center;
   height: 100vh;
   margin: 0;
-  background-color: #dbdbdb;
+  background-color: #f8f8f8;
 }
 
 .purchase-container {
